--- a/20191008_revbayes_biogeography/Five-area DEC.ipynb
+++ b/20191008_revbayes_biogeography/Five-area DEC.ipynb
@@ -624,14 +624,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Processing file \"/Users/cdoorenweerd/Documents/StackIP/Projects active/Saturnia/Saturnia_Biogeography/RevBayes_DEC_5area/five_area_DEC.tre\"\n",
+      "   Processing file \"/Users/cdoorenweerd/Documents/StackIP/Teaching and\n",
+      "   courses/2019_Systematics/2019_fall_UH_Systematics_class/20191008_revbayes_biogeography/five_area_DEC.tre\"\n",
       "\n",
       "Progress:\n",
       "0---------------25---------------50---------------75--------------100\n",
@@ -645,15 +646,13 @@
       "********************************************************************\n",
       "\n",
       "   Annotating tree ...\n",
-      "Processing file \"/Users/cdoorenweerd/Documents/StackIP/Projects active/Saturnia/Saturnia_Biogeography/RevBayes_DEC_5area/five_area_DEC.states.log\"\n",
-      "Processing file \"/Users/cdoorenweerd/Documents/StackIP/Projects active/Saturnia/Saturnia_Biogeography/RevBayes_DEC_5area/five_area_DEC.tre\"\n",
+      "Processing file \"/Users/cdoorenweerd/Documents/StackIP/Teaching and courses/2019_Systematics/2019_fall_UH_Systematics_class/20191008_revbayes_biogeography/five_area_DEC.states.log\"\n",
+      "Processing file \"/Users/cdoorenweerd/Documents/StackIP/Teaching and courses/2019_Systematics/2019_fall_UH_Systematics_class/20191008_revbayes_biogeography/five_area_DEC.tre\"\n",
       "   Compiling MAP ancestral states from 2501 samples in the ancestral state trace, using a burnin of 625 samples.\n",
       "   Calculating ancestral state posteriors...\n",
       "\n",
       "Progress:\n",
-      "0---------------25---------------50---------------75--------------100\n",
-      "********************************************************************\n",
-      "\n"
+      "0---------------25---------------50---------------75--------------100"
      ]
     }
    ],
