--- a/20191008_revbayes_biogeography/Five-area DEC.ipynb
+++ b/20191008_revbayes_biogeography/Five-area DEC.ipynb
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,8 @@
       "\n",
       "\n",
       "Progress:\n",
-      "0---------------25---------------50---------------75--------------100"
+      "0---------------25---------------50---------------75--------------100\n",
+      "********************************************************************\n"
      ]
     }
    ],
@@ -784,7 +785,15 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Error:\tCould not not file model.out\r\n"
+     ]
+    }
+   ],
    "source": [
     "ss = steppingStoneSampler(file=\"model.out\", powerColumnName=\"power\", likelihoodColumnName=\"likelihood\")"
    ]
